Update Doing Page

--- a/pages/doing.html
+++ b/pages/doing.html
@@ -92,11 +92,12 @@
             <div class="col-12 col-md-4 d-flex">
                 <div class="Menu mb-3">
                     <div class="box bg-light p-3 shadow">
-                        <div class="info d-flex align-items-center">
-                            <img class="rounded-circle mr-3" src="/static/image/avatar.jpg" width="70px" alt="">
+                        <div class="info d-flex align-items-center ml-3">
+                            <img class="rounded-circle mr-3 shadow" src="/static/image/avatar.jpg" width="70px" alt="">
                             <div class="">
                                 <h4 class="font-weight-bold">Nguyễn Quốc Thịnh</h4>
-                                <h6>Done: 12/20 Questions</h6>
+                                <h6 class="pl-2"><span class="font-weight-bold">Class:</span> IT-17302</h6>
+                                <h6 class="pl-2"><span class="font-weight-bold">Subject:</span> JavaScript Basic</h6>
                             </div>
                         </div>
 
@@ -116,14 +117,36 @@
                             <span class="item mb-2 mx-1 note">11</span>
                             <span class="item mb-2 mx-1 done">12</span>
                             <span class="item mb-2 mx-1 note">13</span>
-                            <span class="item mb-2 mx-1 note">14</span>
+                            <span class="item mb-2 mx-1 note doing">14</span>
                             <span class="item mb-2 mx-1 done">15</span>
                             <span class="item mb-2 mx-1 incorrect">16</span>
-                            <span class="item mb-2 mx-1">17</span>
-                            <span class="item mb-2 mx-1">18</span>
-                            <span class="item mb-2 mx-1">19</span>
-                            <span class="item">20</span>
+                            <span class="item mb-2 mx-1 correct">17</span>
+                            <span class="item mb-2 mx-1 correct">18</span>
+                            <span class="item mb-2 mx-1 correct">19</span>
+                            <span class="item mb-2 mx-1 correct">20</span>
+                            <span class="item mb-2 mx-1 correct">21</span>
+                            <span class="item mb-2 mx-1 correct">22</span>
+                            <span class="item mb-2 mx-1 correct">23</span>
+                            <span class="item mb-2 mx-1">24</span>
+                            <span class="item mb-2 mx-1">25</span>
+                            <span class="item mb-2 mx-1">26</span>
+                            <span class="item mb-2 mx-1">27</span>
+                            <span class="item mb-2 mx-1">28</span>
+                            <span class="item mb-2 mx-1">29</span>
+                            <span class="item mb-2 mx-1">30</span>
+                            <span class="item mb-2 mx-1">31</span>
+                            <span class="item mb-2 mx-1">32</span>
+                            <span class="item mb-2 mx-1">33</span>
+                            <span class="item mb-2 mx-1">34</span>
+                            <span class="item mb-2 mx-1">35</span>
+                            <span class="item mb-2 mx-1">36</span>
+                            <span class="item mb-2 mx-1">37</span>
+                            <span class="item mb-2 mx-1">38</span>
+                            <span class="item mb-2 mx-1">39</span>
+                            <span class="item mb-2 mx-1">40</span>
                         </div>
+
+                        <h6 class="text-center mb-2"><b>Done: </b> 14/20 Questions</h6>
 
                         <button class="btn w-100 btn-customize" type="submit" data-target="#confirm-submit"
                             data-toggle="modal">Submit</button>
@@ -134,7 +157,7 @@
             <!-- Questions display screen -->
             <div class="col-12 col-md-8">
                 <div class="Display p-5 mb-3">
-                    <nav class="d-flex justify-content-between mb-3">
+                    <nav class="d-flex justify-content-between mb-4">
                         <button class="btn rounded btn-customize px-4 hover">
                             <i class="bi bi-arrow-left-circle"></i>
                         </button>
@@ -147,7 +170,7 @@
                     </nav>
 
                     <div class="questions-container mb-3">
-                        <h4>Question 1:</h4>
+                        <h4>Question <span>14</span>:</h4>
                         <h6>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad aliquid dolor est harum
                             voluptates! Itaque, ratione consectetur. A tenetur sapiente officia? Aliquid esse
                             aliquam soluta temporibus quis adipisci nulla itaque?</h6>
@@ -155,33 +178,41 @@
                     </div>
 
                     <div class="answer-container">
+                        <input class="mr-3 " type="radio" name="answer" id="answer1">
                         <div class="answer-item mb-4 d-flex align-items-center">
-                            <input class="mr-3" type="radio" name="answer" id="answer1">
+                            <span class="choose-tag"></span>
                             <label class="mb-0" for="answer1">Lorem ipsum dolor sit amet consectetur adipisicing
                                 elit. Explicabo praesentium non velit. Dolor ipsum eligendi similique, maiores, ipsa
                                 velit, rerum nemo a exercitationem doloremque beatae ea fugit corporis? Repellendus,
                                 officia.</label>
                         </div>
+                        <input class="mr-3 " type="radio" name="answer" id="answer2">
                         <div class="answer-item mb-4 d-flex align-items-center">
-                            <input class="mr-3" type="radio" name="answer" id="answer2">
+                            <span class="choose-tag"></span>
                             <label class="mb-0" for="answer2">Lorem ipsum dolor sit amet consectetur adipisicing
                                 elit. Explicabo praesentium non velit. Dolor ipsum eligendi similique, maiores, ipsa
                                 velit, rerum nemo a exercitationem doloremque beatae ea fugit corporis? Repellendus,
                                 officia.</label>
                         </div>
+                        <input class="mr-3 " type="radio" name="answer" id="answer3">
                         <div class="answer-item mb-4 d-flex align-items-center">
-                            <input class="mr-3" type="radio" name="answer" id="answer3">
+                            <span class="choose-tag"></span>
                             <label class="mb-0" for="answer3">Lorem ipsum dolor sit amet consectetur adipisicing
                                 elit. Explicabo praesentium non velit. Dolor ipsum eligendi similique, maiores, ipsa
                                 velit, rerum nemo a exercitationem doloremque beatae ea fugit corporis? Repellendus,
                                 officia.</label>
                         </div>
+
+                        <input class="mr-3 " type="radio" name="answer" id="answer4">
                         <div class="answer-item mb-4 d-flex align-items-center">
-                            <input class="mr-3" type="radio" name="answer" id="answer4">
+                            <span class="choose-tag"></span>
                             <label class="mb-0" for="answer4">Lorem ipsum dolor sit amet consectetur adipisicing
                                 elit. Explicabo praesentium non velit. Dolor ipsum eligendi similique, maiores, ipsa
                                 velit, rerum nemo a exercitationem doloremque beatae ea fugit corporis? Repellendus,
                                 officia.</label>
+                        </div>
+                        <div class="d-flex">
+                            <button class="btn btn-customize rounded px-4 ml-auto">Next question</button>
                         </div>
                     </div>
                 </div>
@@ -257,8 +288,6 @@
                             </div>
                         </div>
                     </form>
-
-
                 </div>
             </div>
         </div>
@@ -303,10 +332,19 @@
 
 
 
+
     <script src="/lib/jQuery-3.5.1/jquery.slim.min.js"></script>
     <script src="/lib/wow-1.1.2/wow.min.js"></script>
     <script src="/lib/wow-1.1.2/init.js"></script>
     <script src="/lib/bootstrap-4.6.2/dist/js/bootstrap.min.js"></script>
+
+    <script>
+        $(".answer-item").click(function () {
+            $(this).find("input").prop("checked", true);
+            $(".answer-item").removeClass("checked");
+            $(this).toggleClass("checked");
+        });
+    </script>
 
 </body>
 
