--- a/pages/index.html
+++ b/pages/index.html
@@ -31,8 +31,8 @@
     <!-- Navigation -->
     <div class="">
         <nav class="navbar navbar-expand-lg navbar-dark bg-linear-gradient NavigationBar sticky-top">
-            <a class="navbar-brand d-flex align-items-center pl-xl-5" href="#">
-                <img src="/static/image/light.png" width="50" height="50" class="d-inline-block align-top" alt="">
+            <a class="navbar-brand d-flex align-items-center pl-xl-5" href=".index.html">
+                <img src="../static/image/light.png" width="50" height="50" class="d-inline-block align-top" alt="">
                 <span class="name-brand h4 ml-3 mb-0 font-weight-bold">E-Choosing</span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -41,7 +41,7 @@
             </button>
 
             <div class="collapse navbar-collapse " id="navbarSupportedContent">
-                <form class="wow fadeInDown form-inline my-2 my-lg-0 flex-grow-1 justify-content-center test-code">
+                <form class="form-inline my-2 my-lg-0 flex-grow-1 justify-content-center test-code">
                     <div class="input-group">
                         <input type="text" class="form-control " placeholder="Enter the join code ...">
                         <div class="input-group-append">
@@ -51,21 +51,19 @@
                 </form>
                 <ul class="navbar-nav flex-grow-1 justify-content-end">
                     <li class="nav-item mb-2 mb-lg-0">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item mb-2 mb-lg-0">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="./courses.html">Courses</a>
                     </li>
                     <li class="nav-item mb-2 mb-lg-0 dropdown">
                         <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">
-                            Dropdown
+                            Pages
                         </a>
                         <div class="dropdown-menu dropdown-menu fadeInUp m-0" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
+                            <a class="dropdown-item" href="./doing.html">Doing</a>
+                            <a class="dropdown-item" href="./contract.html">Contract Us</a>
                         </div>
                     </li>
 
@@ -73,7 +71,7 @@
                 <ul class="navbar-nav justify-content-end">
                     <li class="nav-item ml-4 px-3" id="avatar">
                         <div class="avt-container">
-                            <img class="avt_image" src="/static/image/avatar.jpg" alt="Avt">
+                            <img class="avt_image" src="../static/image/avatar.jpg" alt="Avt">
                             <span class="username ml-2">Nguyễn Quốc Thịnh</span>
                             <i class="bi bi-caret-down-fill ml-1"></i>
                         </div>
@@ -93,7 +91,7 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100 pr-md-5" src="/static/image/banner_3.png" alt="First slide">
+                    <img class="d-block w-100 pr-md-5" src="../static/image/banner_3.png" alt="First slide">
                     <div class="carousel-caption d-none d-md-flex align-items-start">
                         <h1 class="wow fadeInDown title mb-3">The best online checking platform</h1>
                         <p class="wow fadeInUp text-left h5">The best choice of teachers to check
@@ -101,11 +99,10 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100 pr-md-5" src="/static/image/banner_2.png" alt="Second slide">
+                    <img class="d-block w-100 pr-md-5" src="../static/image/banner_2.png" alt="Second slide">
                     <div class="carousel-caption d-none d-md-flex">
                         <h1 data-wow-delay="0.3s" data-wow-duration="1.2s" class="wow fadeInDown title mb-3">Take the
-                            test
-                            without Log In</h1>
+                            test without Log In</h1>
                         <div class="input-group mb-3 test-code">
                             <input type="text" data-wow-delay="0.3s" data-wow-duration="1.2s"
                                 class="wow fadeInLeft form-control" placeholder="Enter the join code ..."
@@ -118,16 +115,15 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100 pr-md-5" src="/static/image/banner_1.png" alt="Third slide">
+                    <img class="d-block w-100 pr-md-5" src="../static/image/banner_1.png" alt="Third slide">
                     <div class="carousel-caption d-none d-md-flex align-items-start">
                         <h1 data-wow-delay="0.3s" data-wow-duration="1.2s" class="wow fadeInDown title mb-3">Interface's
-                            easy to access for
-                            everyone</h1>
+                            easy to access for everyone</h1>
                         <div class="d-flex w-100">
-                            <button data-wow-delay="0.3s" data-wow-duration="1.2s"
-                                class="wow fadeInLeft flex-grow-1 btn btn-customize py-3 ">Register</button>
-                            <button data-wow-delay="0.3s" data-wow-duration="1.2s"
-                                class="wow fadeInRight flex-grow-1 btn btn-customize py-3 ml-4">Log In</button>
+                            <a data-wow-delay="0.3s" data-wow-duration="1.2s" href="./signup.html"
+                                class="wow fadeInLeft flex-grow-1 btn btn-customize py-3 ">Register</a>
+                            <a data-wow-delay="0.3s" data-wow-duration="1.2s" href="./login.html"
+                                class="wow fadeInRight flex-grow-1 btn btn-customize py-3 ml-4">Log In</a>
                         </div>
                     </div>
                 </div>
@@ -191,7 +187,7 @@
         <!-- Welcome -->
         <section class="row mb-3 ">
             <div class=" wow fadeInLeft col-md-6">
-                <img class="w-100" src="/static/image/welcome.png" alt="">
+                <img class="w-100" src="../static/image/welcome.png" alt="">
             </div>
             <div class="wow fadeInRight col-md-6 text-light">
                 <h1 class="title font-weight-bold">Welcome to E-Choosing</h1>
@@ -217,36 +213,36 @@
                     <h1 class="mb-3 font-weight-bold">Quiz Categories</h1>
                 </div>
                 <div class="row">
-                    <div data-wow-delay="0.3s" class="wow bounceIn col-md-6 quiz-banner">
-                        <img class="m-3 w-100" src="/static/image/toan.png" alt="">
+                    <a data-wow-delay="0.3s" class="wow bounceIn col-md-6 quiz-banner" href="./doing.html">
+                        <img class="m-3 w-100" src="../static/image/toan.png" alt="">
                         <div class="quiz-title">
                             <h5 class="m-0">Math</h5>
                             <p class="m-0">5 Template</p>
                         </div>
-                    </div>
+                    </a>
                     <div class="col-md-6">
                         <div class="row">
-                            <div data-wow-delay="0.5s" class="wow bounceIn col-md-12 quiz-banner">
-                                <img class="m-3 w-100" src="/static/image/tin.png" alt="">
+                            <a data-wow-delay="0.5s" class="wow bounceIn col-md-12 quiz-banner" href="./doing.html">
+                                <img class="m-3 w-100" src="../static/image/tin.png" alt="">
                                 <div class="quiz-title">
                                     <h5 class="m-0">Information technology</h5>
                                     <p class="m-0">5 Template</p>
                                 </div>
-                            </div>
-                            <div data-wow-delay="0.7s" class="wow bounceIn col-md-6 quiz-banner">
-                                <img class="m-3 w-100" src="/static/image/hoa.png" alt="">
+                            </a>
+                            <a data-wow-delay="0.3s" class="wow bounceIn col-md-6 quiz-banner" href="./doing.html">
+                                <img class="m-3 w-100" src="../static/image/hoa.png" alt="">
                                 <div class="quiz-title">
                                     <h5 class="m-0">Chemical</h5>
                                     <p class="m-0">5 Template</p>
                                 </div>
-                            </div>
-                            <div data-wow-delay="0.9s" class="wow bounceIn col-md-6 quiz-banner">
-                                <img class="m-3 w-100" src="/static/image/dia.png" alt="">
+                            </a>
+                            <a data-wow-delay="0.5s" class="wow bounceIn col-md-6 quiz-banner" href="./doing.html">
+                                <img class="m-3 w-100" src="../static/image/dia.png" alt="">
                                 <div class="quiz-title">
                                     <h5 class="m-0">Geography</h5>
                                     <p class="m-0">5 Template</p>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -264,7 +260,7 @@
             <div class="row pt-3">
                 <div class="col-lg-4 col-md-6 mb-3">
                     <div class="d-flex align-items-center">
-                        <img src="/static/image/light.png" width="60px">
+                        <img src="../static/image/light.png" width="60px">
                         <h4 class="font-weight-bold ml-3">E-Choosing</h4>
                     </div>
                     <p class="mt-3 description">E-Choosing is an online platform for quick and easy subject assessments
@@ -272,7 +268,7 @@
                         results for improvement. It offers a variety of subjects to choose from and a user-friendly
                         interface.</p>
                     <h6 class="font-weight-bold link">
-                        <a>About Us <i class="bi bi-arrow-right ml-2"></i></a>
+                        <a href="../index.html">About Us <i class="bi bi-arrow-right ml-2"></i></a>
                     </h6>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-3">
@@ -289,26 +285,22 @@
                 </div>
                 <div class="col-lg-2 col-md-6 mb-3">
                     <h4 class="font-weight-bold">Link</h4>
-                    <a href="##">
+                    <a href="./index.html">
                         <p class="mb-2 link">
                             <i class="bi bi-chevron-right mr-2"></i>Home
                         </p>
                     </a>
-                    <a href="##">
+                    <a href="./index.html">
                         <p class="mb-2 link">
                             <i class="bi bi-chevron-right mr-2"></i>About Us
                         </p>
                     </a>
-                    <a href="##">
+                    <a href="./contract.html">
                         <p class="mb-2 link">
                             <i class="bi bi-chevron-right mr-2"></i>Contract
                         </p>
                     </a>
-                    <a href="##">
-                        <p class="mb-2 link">
-                            <i class="bi bi-chevron-right mr-2"></i>FAQs & Help
-                        </p>
-                    </a>
+                 
                 </div>
 
                 <div class="col-lg-3 col-md-6 mb-3">
@@ -318,7 +310,7 @@
                         <div class="input-group mb-3">
                             <input type="email" class="form-control" placeholder="Enter your email">
                             <div class="input-group-append">
-                                <button class="btn btn-customize" type="button">Button</button>
+                                <a href="./signup.html" class="btn btn-customize" type="button">Register</a>
                             </div>
                         </div>
                     </form>
