Create link for Add href link to a tags

--- a/pages/forgot-password.html
+++ b/pages/forgot-password.html
@@ -29,9 +29,9 @@
 
     <!-- Navigation -->
     <div class="">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-linear-gradient NavigationBar sticky-top shadow">
-            <a class="navbar-brand d-flex align-items-center pl-xl-5" href="#">
-                <img src="/static/image/light.png" width="50" height="50" class="d-inline-block align-top" alt="">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-linear-gradient NavigationBar sticky-top">
+            <a class="navbar-brand d-flex align-items-center pl-xl-5" href=".index.html">
+                <img src="../static/image/light.png" width="50" height="50" class="d-inline-block align-top" alt="">
                 <span class="name-brand h4 ml-3 mb-0 font-weight-bold">E-Choosing</span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -40,41 +40,52 @@
             </button>
 
             <div class="collapse navbar-collapse " id="navbarSupportedContent">
-                <form class="wow fadeInDown form-inline my-2 my-lg-0 flex-grow-1 justify-content-center test-code">
+                <form class="form-inline my-2 my-lg-0 flex-grow-1 justify-content-center test-code">
                     <div class="input-group">
                         <input type="text" class="form-control " placeholder="Enter the join code ...">
                         <div class="input-group-append">
-                            <button class="btn btn-light" type="button">Start</button>
+                            <a class="btn btn-light" type="button" href="./doing.html">Start</a>
                         </div>
                     </div>
                 </form>
                 <ul class="navbar-nav flex-grow-1 justify-content-end">
                     <li class="nav-item mb-2 mb-lg-0">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item mb-2 mb-lg-0">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="./courses.html">Courses</a>
                     </li>
                     <li class="nav-item mb-2 mb-lg-0 dropdown">
                         <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">
-                            Dropdown
+                            Pages
                         </a>
-                        <div class="dropdown-menu dropdown-menu flipInX m-0" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
+                        <div class="dropdown-menu dropdown-menu fadeInUp m-0" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="./doing.html">Doing</a>
+                            <a class="dropdown-item" href="./contract.html">Contract Us</a>
                         </div>
                     </li>
 
                     <li class="nav-item mb-2 mb-lg-0 active">
-                        <a class="nav-link" href="#">Sign In</a>
+                        <a class="nav-link" href="./login.html">Sign In</a>
                     </li>
                     <li class="nav-item mb-2 mb-lg-0 active">
-                        <a class="nav-link" href="#">Sign Up</a>
+                        <a class="nav-link" href="./signup.html">Sign Up</a>
                     </li>
                 </ul>
+
+                <!-- Phần Đã login -->
+                <ul class="navbar-nav justify-content-end d-none">
+                    <li class="nav-item ml-4 px-3" id="avatar">
+                        <a class="avt-container" href="./user-info.html">
+                            <img class="avt_image" src="../static/image/avatar.jpg" alt="Avt">
+                            <span class="username ml-2">Nguyễn Quốc Thịnh</span>
+                            <i class="bi bi-caret-down-fill ml-1"></i>
+                        </a>
+                    </li>
+                </ul>
+                <!-- Phần Đã login -->
+
 
 
             </div>
@@ -134,22 +145,22 @@
 
                         <div class="d-flex justify-content-center mb-3">
                             <a href="##" class="login-icon hover">
-                                <img src="/static/image/google-icon.png" width="30px" alt="">
+                                <img src="../static/image/google-icon.png" width="30px" alt="">
                             </a>
                             <a href="##" class="login-icon hover">
-                                <img src="/static/image/facebook-icon.png" width="30px" alt="">
+                                <img src="../static/image/facebook-icon.png" width="30px" alt="">
                             </a>
                             <a href="##" class="login-icon hover">
-                                <img src="/static/image/github-icon.png" width="30px" alt="">
+                                <img src="../static/image/github-icon.png" width="30px" alt="">
                             </a>
                         </div>
 
                         <div class="text-center">
                             <div class="d-flex justify-content-center">
-                                <a href="##" class="btn bg-linear-gradient hover mr-3">
+                                <a href="./login.html" class="btn bg-linear-gradient hover mr-3">
                                     <p class=" mb-0 px-4">Sign In</p>
                                 </a>
-                                <a href="##" class="btn bg-linear-gradient hover ml-3">
+                                <a href="./signup.html" class="btn bg-linear-gradient hover ml-3">
                                     <p class=" mb-0 px-4">Sign Up</p>
                                 </a>
                             </div>
@@ -162,15 +173,13 @@
         </div>
     </div>
     <!-- Content -->
-
     <!-- Footer -->
-
-    <footer class="w-100 py-3 bg-linear-gradient shadow Footer">
+    <footer class="wow fadeInUp w-100 py-3 bg-linear-gradient Footer">
         <div class="container text-light ">
             <div class="row pt-3">
                 <div class="col-lg-4 col-md-6 mb-3">
                     <div class="d-flex align-items-center">
-                        <img src="/static/image/light.png" width="60px">
+                        <img src="../static/image/light.png" width="60px">
                         <h4 class="font-weight-bold ml-3">E-Choosing</h4>
                     </div>
                     <p class="mt-3 description">E-Choosing is an online platform for quick and easy subject assessments
@@ -178,7 +187,7 @@
                         results for improvement. It offers a variety of subjects to choose from and a user-friendly
                         interface.</p>
                     <h6 class="font-weight-bold link">
-                        <a>About Us <i class="bi bi-arrow-right ml-2"></i></a>
+                        <a href="../index.html">About Us <i class="bi bi-arrow-right ml-2"></i></a>
                     </h6>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-3">
@@ -195,36 +204,32 @@
                 </div>
                 <div class="col-lg-2 col-md-6 mb-3">
                     <h4 class="font-weight-bold">Link</h4>
-                    <a href="##">
+                    <a href="./index.html">
                         <p class="mb-2 link">
                             <i class="bi bi-chevron-right mr-2"></i>Home
                         </p>
                     </a>
-                    <a href="##">
+                    <a href="./index.html">
                         <p class="mb-2 link">
                             <i class="bi bi-chevron-right mr-2"></i>About Us
                         </p>
                     </a>
-                    <a href="##">
+                    <a href="./contract.html">
                         <p class="mb-2 link">
                             <i class="bi bi-chevron-right mr-2"></i>Contract
                         </p>
                     </a>
-                    <a href="##">
-                        <p class="mb-2 link">
-                            <i class="bi bi-chevron-right mr-2"></i>FAQs & Help
-                        </p>
-                    </a>
+
                 </div>
 
                 <div class="col-lg-3 col-md-6 mb-3">
                     <h4 class="font-weight-bold">Newsletter</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>Please enter your email address to receive notifications from us as soon as possible.</p>
                     <form>
                         <div class="input-group mb-3">
                             <input type="email" class="form-control" placeholder="Enter your email">
                             <div class="input-group-append">
-                                <button class="btn btn-customize" type="button">Button</button>
+                                <a href="./signup.html" class="btn btn-customize" type="button">Register</a>
                             </div>
                         </div>
                     </form>
@@ -234,9 +239,7 @@
             </div>
         </div>
     </footer>
-
     <!-- Footer -->
-
 
 
     <script src="/lib/jQuery-3.5.1/jquery.slim.min.js"></script>
