--- a/pages/index.html
+++ b/pages/index.html
@@ -45,7 +45,7 @@
                     <div class="input-group">
                         <input type="text" class="form-control " placeholder="Enter the join code ...">
                         <div class="input-group-append">
-                            <button class="btn btn-light" type="button">Start</button>
+                            <a class="btn btn-light " type="button" href="./doing.html">Start</a>
                         </div>
                     </div>
                 </form>
@@ -70,11 +70,11 @@
                 </ul>
                 <ul class="navbar-nav justify-content-end">
                     <li class="nav-item ml-4 px-3" id="avatar">
-                        <div class="avt-container">
+                        <a class="avt-container" href="./user-info.html">
                             <img class="avt_image" src="../static/image/avatar.jpg" alt="Avt">
                             <span class="username ml-2">Nguyễn Quốc Thịnh</span>
                             <i class="bi bi-caret-down-fill ml-1"></i>
-                        </div>
+                        </a>
                     </li>
                 </ul>
 
@@ -83,9 +83,7 @@
     </div>
     <!-- Navigation -->
 
-    <!-- Content -->
-    <!-- Content -->
-
+   
     <!-- Header -->
     <header class="bl-1 banner shadow mb-5">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -108,8 +106,8 @@
                                 class="wow fadeInLeft form-control" placeholder="Enter the join code ..."
                                 aria-label="Recipient's username" aria-describedby="basic-addon2">
                             <div class="input-group-append">
-                                <button data-wow-delay="0.3s" data-wow-duration="1.2s"
-                                    class="wow fadeInRight btn btn-customize" type="button">Let's Start</button>
+                                <a data-wow-delay="0.3s" data-wow-duration="1.2s" href="./doing.html"
+                                    class="wow fadeInRight btn btn-customize" type="button">Let's Start</a>
                             </div>
                         </div>
                     </div>
@@ -220,12 +218,13 @@
                             <p class="m-0">5 Template</p>
                         </div>
                     </a>
+                    
                     <div class="col-md-6">
                         <div class="row">
                             <a data-wow-delay="0.5s" class="wow bounceIn col-md-12 quiz-banner" href="./doing.html">
                                 <img class="m-3 w-100" src="../static/image/tin.png" alt="">
                                 <div class="quiz-title">
-                                    <h5 class="m-0">Information technology</h5>
+                                    <h5 class="m-0">Informatics</h5>
                                     <p class="m-0">5 Template</p>
                                 </div>
                             </a>
