--- a/pages/contract.html
+++ b/pages/contract.html
@@ -32,8 +32,8 @@
     <!-- Navigation -->
     <div class="">
         <nav class="navbar navbar-expand-lg navbar-dark bg-linear-gradient NavigationBar sticky-top">
-            <a class="navbar-brand d-flex align-items-center pl-xl-5" href="#">
-                <img src="/static/image/light.png" width="50" height="50" class="d-inline-block align-top" alt="">
+            <a class="navbar-brand d-flex align-items-center pl-xl-5" href=".index.html">
+                <img src="../static/image/light.png" width="50" height="50" class="d-inline-block align-top" alt="">
                 <span class="name-brand h4 ml-3 mb-0 font-weight-bold">E-Choosing</span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -42,54 +42,53 @@
             </button>
 
             <div class="collapse navbar-collapse " id="navbarSupportedContent">
-                <form class="wow fadeInDown form-inline my-2 my-lg-0 flex-grow-1 justify-content-center test-code">
+                <form class="form-inline my-2 my-lg-0 flex-grow-1 justify-content-center test-code">
                     <div class="input-group">
                         <input type="text" class="form-control " placeholder="Enter the join code ...">
                         <div class="input-group-append">
-                            <button class="btn btn-light" type="button">Start</button>
+                            <a class="btn btn-light" type="button" href="./doing.html">Start</a>
                         </div>
                     </div>
                 </form>
                 <ul class="navbar-nav flex-grow-1 justify-content-end">
                     <li class="nav-item mb-2 mb-lg-0">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item mb-2 mb-lg-0">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="./courses.html">Courses</a>
                     </li>
                     <li class="nav-item mb-2 mb-lg-0 dropdown">
                         <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">
-                            Dropdown
+                            Pages
                         </a>
-                        <div class="dropdown-menu dropdown-menu flipInX m-0" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
+                        <div class="dropdown-menu dropdown-menu fadeInUp m-0" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="./doing.html">Doing</a>
+                            <a class="dropdown-item" href="./contract.html">Contract Us</a>
                         </div>
                     </li>
 
-                    <li class="nav-item mb-2 mb-lg-0 active">
-                        <a class="nav-link" href="#">Sign In</a>
-                    </li>
-                    <li class="nav-item mb-2 mb-lg-0 active">
-                        <a class="nav-link" href="#">Sign Up</a>
+                </ul>
+                <ul class="navbar-nav justify-content-end">
+                    <li class="nav-item ml-4 px-3" id="avatar">
+                        <a class="avt-container" href="./user-info.html">
+                            <img class="avt_image" src="../static/image/avatar.jpg" alt="Avt">
+                            <span class="username ml-2">Nguyễn Quốc Thịnh</span>
+                            <i class="bi bi-caret-down-fill ml-1"></i>
+                        </a>
                     </li>
                 </ul>
-
 
             </div>
         </nav>
     </div>
     <!-- Navigation -->
-
     <!-- Header -->
     <header class="bl-1 banner shadow mb-5">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100 pr-md-5" src="/static/image/banner_3.png" alt="First slide">
+                    <img class="d-block w-100 pr-md-5" src="../static/image/banner_3.png" alt="First slide">
                     <div class="carousel-caption d-none d-md-flex align-items-start">
                         <h1 class="wow fadeInDown title mb-3">The best online checking platform</h1>
                         <p class="wow fadeInUp text-left h5">The best choice of teachers to check
@@ -97,33 +96,31 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100 pr-md-5" src="/static/image/banner_2.png" alt="Second slide">
+                    <img class="d-block w-100 pr-md-5" src="../static/image/banner_2.png" alt="Second slide">
                     <div class="carousel-caption d-none d-md-flex">
                         <h1 data-wow-delay="0.3s" data-wow-duration="1.2s" class="wow fadeInDown title mb-3">Take the
-                            test
-                            without Log In</h1>
+                            test without Log In</h1>
                         <div class="input-group mb-3 test-code">
                             <input type="text" data-wow-delay="0.3s" data-wow-duration="1.2s"
                                 class="wow fadeInLeft form-control" placeholder="Enter the join code ..."
                                 aria-label="Recipient's username" aria-describedby="basic-addon2">
                             <div class="input-group-append">
-                                <button data-wow-delay="0.3s" data-wow-duration="1.2s"
-                                    class="wow fadeInRight btn btn-customize" type="button">Let's Start</button>
+                                <a data-wow-delay="0.3s" data-wow-duration="1.2s" href="./doing.html"
+                                    class="wow fadeInRight btn btn-customize" type="button">Let's Start</a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100 pr-md-5" src="/static/image/banner_1.png" alt="Third slide">
+                    <img class="d-block w-100 pr-md-5" src="../static/image/banner_1.png" alt="Third slide">
                     <div class="carousel-caption d-none d-md-flex align-items-start">
                         <h1 data-wow-delay="0.3s" data-wow-duration="1.2s" class="wow fadeInDown title mb-3">Interface's
-                            easy to access for
-                            everyone</h1>
+                            easy to access for everyone</h1>
                         <div class="d-flex w-100">
-                            <button data-wow-delay="0.3s" data-wow-duration="1.2s"
-                                class="wow fadeInLeft flex-grow-1 btn btn-customize py-3 ">Register</button>
-                            <button data-wow-delay="0.3s" data-wow-duration="1.2s"
-                                class="wow fadeInRight flex-grow-1 btn btn-customize py-3 ml-4">Log In</button>
+                            <a data-wow-delay="0.3s" data-wow-duration="1.2s" href="./signup.html"
+                                class="wow fadeInLeft flex-grow-1 btn btn-customize py-3 ">Register</a>
+                            <a data-wow-delay="0.3s" data-wow-duration="1.2s" href="./login.html"
+                                class="wow fadeInRight flex-grow-1 btn btn-customize py-3 ml-4">Log In</a>
                         </div>
                     </div>
                 </div>
@@ -223,12 +220,12 @@
 
     <!-- Footer -->
 
-    <footer class="w-100 py-3 bg-linear-gradient Footer">
+    <footer class="wow fadeInUp w-100 py-3 bg-linear-gradient Footer">
         <div class="container text-light ">
             <div class="row pt-3">
                 <div class="col-lg-4 col-md-6 mb-3">
                     <div class="d-flex align-items-center">
-                        <img src="/static/image/light.png" width="60px">
+                        <img src="../static/image/light.png" width="60px">
                         <h4 class="font-weight-bold ml-3">E-Choosing</h4>
                     </div>
                     <p class="mt-3 description">E-Choosing is an online platform for quick and easy subject assessments
@@ -236,7 +233,7 @@
                         results for improvement. It offers a variety of subjects to choose from and a user-friendly
                         interface.</p>
                     <h6 class="font-weight-bold link">
-                        <a>About Us <i class="bi bi-arrow-right ml-2"></i></a>
+                        <a href="../index.html">About Us <i class="bi bi-arrow-right ml-2"></i></a>
                     </h6>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-3">
@@ -253,36 +250,32 @@
                 </div>
                 <div class="col-lg-2 col-md-6 mb-3">
                     <h4 class="font-weight-bold">Link</h4>
-                    <a href="##">
+                    <a href="./index.html">
                         <p class="mb-2 link">
                             <i class="bi bi-chevron-right mr-2"></i>Home
                         </p>
                     </a>
-                    <a href="##">
+                    <a href="./index.html">
                         <p class="mb-2 link">
                             <i class="bi bi-chevron-right mr-2"></i>About Us
                         </p>
                     </a>
-                    <a href="##">
+                    <a href="./contract.html">
                         <p class="mb-2 link">
                             <i class="bi bi-chevron-right mr-2"></i>Contract
                         </p>
                     </a>
-                    <a href="##">
-                        <p class="mb-2 link">
-                            <i class="bi bi-chevron-right mr-2"></i>FAQs & Help
-                        </p>
-                    </a>
+
                 </div>
 
                 <div class="col-lg-3 col-md-6 mb-3">
                     <h4 class="font-weight-bold">Newsletter</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>Please enter your email address to receive notifications from us as soon as possible.</p>
                     <form>
                         <div class="input-group mb-3">
                             <input type="email" class="form-control" placeholder="Enter your email">
                             <div class="input-group-append">
-                                <button class="btn btn-customize" type="button">Button</button>
+                                <a href="./signup.html" class="btn btn-customize" type="button">Register</a>
                             </div>
                         </div>
                     </form>
@@ -294,6 +287,7 @@
     </footer>
 
     <!-- Footer -->
+
 
 
 
