--- a/pages/doing.html
+++ b/pages/doing.html
@@ -28,12 +28,11 @@
 </head>
 
 <body>
-
     <!-- Navigation -->
     <div class="">
         <nav class="navbar navbar-expand-lg navbar-dark bg-linear-gradient NavigationBar sticky-top">
-            <a class="navbar-brand d-flex align-items-center pl-xl-5" href="#">
-                <img src="/static/image/light.png" width="50" height="50" class="d-inline-block align-top" alt="">
+            <a class="navbar-brand d-flex align-items-center pl-xl-5" href=".index.html">
+                <img src="../static/image/light.png" width="50" height="50" class="d-inline-block align-top" alt="">
                 <span class="name-brand h4 ml-3 mb-0 font-weight-bold">E-Choosing</span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -42,42 +41,42 @@
             </button>
 
             <div class="collapse navbar-collapse " id="navbarSupportedContent">
-                <form class="wow fadeInDown form-inline my-2 my-lg-0 flex-grow-1 justify-content-center test-code">
+                <form class="form-inline my-2 my-lg-0 flex-grow-1 justify-content-center test-code">
                     <div class="input-group">
                         <input type="text" class="form-control " placeholder="Enter the join code ...">
                         <div class="input-group-append">
-                            <button class="btn btn-light" type="button">Start</button>
+                            <a class="btn btn-light" type="button" href="./doing.html">Start</a>
                         </div>
                     </div>
                 </form>
                 <ul class="navbar-nav flex-grow-1 justify-content-end">
                     <li class="nav-item mb-2 mb-lg-0">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item mb-2 mb-lg-0">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="./courses.html">Courses</a>
                     </li>
                     <li class="nav-item mb-2 mb-lg-0 dropdown">
                         <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">
-                            Dropdown
+                            Pages
                         </a>
-                        <div class="dropdown-menu dropdown-menu flipInX m-0" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
+                        <div class="dropdown-menu dropdown-menu fadeInUp m-0" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="./doing.html">Doing</a>
+                            <a class="dropdown-item" href="./contract.html">Contract Us</a>
                         </div>
                     </li>
 
-                    <li class="nav-item mb-2 mb-lg-0 active">
-                        <a class="nav-link" href="#">Sign In</a>
-                    </li>
-                    <li class="nav-item mb-2 mb-lg-0 active">
-                        <a class="nav-link" href="#">Sign Up</a>
+                </ul>
+                <ul class="navbar-nav justify-content-end">
+                    <li class="nav-item ml-4 px-3" id="avatar">
+                        <a class="avt-container" href="./user-info.html">
+                            <img class="avt_image" src="../static/image/avatar.jpg" alt="Avt">
+                            <span class="username ml-2">Nguyễn Quốc Thịnh</span>
+                            <i class="bi bi-caret-down-fill ml-1"></i>
+                        </a>
                     </li>
                 </ul>
-
 
             </div>
         </nav>
@@ -87,11 +86,10 @@
     <!-- Content -->
     <main class="container-fluid prevent-select mb-5 mt-4">
         <div class="row">
-
             <!-- Menu -->
             <div class="col-12 col-md-4 d-flex">
                 <div class="Menu mb-3">
-                    <div class="box bg-light p-3 shadow">
+                    <div class="wow fadeInLeft box bg-light p-3 shadow">
                         <div class="info d-flex align-items-center ml-3">
                             <img class="rounded-circle mr-3 shadow" src="/static/image/avatar.jpg" width="70px" alt="">
                             <div class="">
@@ -156,7 +154,7 @@
 
             <!-- Questions display screen -->
             <div class="col-12 col-md-8">
-                <div class="Display p-5 mb-3">
+                <div class="wow fadeInRight Display p-5 mb-3">
                     <nav class="d-flex justify-content-between mb-4">
                         <button class="btn rounded btn-customize px-4 hover">
                             <i class="bi bi-arrow-left-circle"></i>
@@ -212,7 +210,10 @@
                                 officia.</label>
                         </div>
                         <div class="d-flex">
-                            <button class="btn btn-customize rounded px-4 ml-auto">Next question</button>
+                            <button class="btn btn-customize rounded hover px-4 ml-auto d-flex align-items-center">
+                                Next question
+                                <i class="bi bi-arrow-right ml-2"></i>
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -224,76 +225,73 @@
 
 
 
-    <!-- Footer -->
-    <footer class="w-100 py-3 bg-linear-gradient Footer">
-        <div class="container text-light ">
-            <div class="row pt-3">
-                <div class="col-lg-4 col-md-6 mb-3">
-                    <div class="d-flex align-items-center">
-                        <img src="/static/image/light.png" width="60px">
-                        <h4 class="font-weight-bold ml-3">E-Choosing</h4>
-                    </div>
-                    <p class="mt-3 description">E-Choosing is an online platform for quick and easy subject assessments
-                        with instant
-                        results for improvement. It offers a variety of subjects to choose from and a user-friendly
-                        interface.</p>
-                    <h6 class="font-weight-bold link">
-                        <a>About Us <i class="bi bi-arrow-right ml-2"></i></a>
-                    </h6>
+   <!-- Footer -->
+   <footer class="wow fadeInUp w-100 py-3 bg-linear-gradient Footer">
+    <div class="container text-light ">
+        <div class="row pt-3">
+            <div class="col-lg-4 col-md-6 mb-3">
+                <div class="d-flex align-items-center">
+                    <img src="../static/image/light.png" width="60px">
+                    <h4 class="font-weight-bold ml-3">E-Choosing</h4>
                 </div>
-                <div class="col-lg-3 col-md-6 mb-3">
-                    <h4 class="font-weight-bold">Contract</h4>
-                    <p><span><i class="bi bi-geo-fill mr-2"></i></span>542 Ton Duc Thang, Da Nang</p>
-                    <p><span><i class="bi bi-telephone-fill mr-2"></i></span>0123456789</p>
-                    <p><span><i class="bi bi-envelope-fill mr-2"></i></span>thinhnq3009@gmail.com</p>
-                    <div class="d-flex contract-method">
-                        <i class="bi bi-facebook"></i>
-                        <i class="bi bi-youtube"></i>
-                        <i class="bi bi-github"></i>
-                        <i class="bi bi-instagram"></i>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-6 mb-3">
-                    <h4 class="font-weight-bold">Link</h4>
-                    <a href="##">
-                        <p class="mb-2 link">
-                            <i class="bi bi-chevron-right mr-2"></i>Home
-                        </p>
-                    </a>
-                    <a href="##">
-                        <p class="mb-2 link">
-                            <i class="bi bi-chevron-right mr-2"></i>About Us
-                        </p>
-                    </a>
-                    <a href="##">
-                        <p class="mb-2 link">
-                            <i class="bi bi-chevron-right mr-2"></i>Contract
-                        </p>
-                    </a>
-                    <a href="##">
-                        <p class="mb-2 link">
-                            <i class="bi bi-chevron-right mr-2"></i>FAQs & Help
-                        </p>
-                    </a>
-                </div>
-
-                <div class="col-lg-3 col-md-6 mb-3">
-                    <h4 class="font-weight-bold">Newsletter</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <form>
-                        <div class="input-group mb-3">
-                            <input type="email" class="form-control" placeholder="Enter your email">
-                            <div class="input-group-append">
-                                <button class="btn btn-customize" type="button">Button</button>
-                            </div>
-                        </div>
-                    </form>
+                <p class="mt-3 description">E-Choosing is an online platform for quick and easy subject assessments
+                    with instant
+                    results for improvement. It offers a variety of subjects to choose from and a user-friendly
+                    interface.</p>
+                <h6 class="font-weight-bold link">
+                    <a href="../index.html">About Us <i class="bi bi-arrow-right ml-2"></i></a>
+                </h6>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-3">
+                <h4 class="font-weight-bold">Contract</h4>
+                <p><span><i class="bi bi-geo-fill mr-2"></i></span>542 Ton Duc Thang, Da Nang</p>
+                <p><span><i class="bi bi-telephone-fill mr-2"></i></span>0123456789</p>
+                <p><span><i class="bi bi-envelope-fill mr-2"></i></span>thinhnq3009@gmail.com</p>
+                <div class="d-flex contract-method">
+                    <i class="bi bi-facebook"></i>
+                    <i class="bi bi-youtube"></i>
+                    <i class="bi bi-github"></i>
+                    <i class="bi bi-instagram"></i>
                 </div>
             </div>
-        </div>
-    </footer>
+            <div class="col-lg-2 col-md-6 mb-3">
+                <h4 class="font-weight-bold">Link</h4>
+                <a href="./index.html">
+                    <p class="mb-2 link">
+                        <i class="bi bi-chevron-right mr-2"></i>Home
+                    </p>
+                </a>
+                <a href="./index.html">
+                    <p class="mb-2 link">
+                        <i class="bi bi-chevron-right mr-2"></i>About Us
+                    </p>
+                </a>
+                <a href="./contract.html">
+                    <p class="mb-2 link">
+                        <i class="bi bi-chevron-right mr-2"></i>Contract
+                    </p>
+                </a>
 
-    <!-- Footer -->
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-3">
+                <h4 class="font-weight-bold">Newsletter</h4>
+                <p>Please enter your email address to receive notifications from us as soon as possible.</p>
+                <form>
+                    <div class="input-group mb-3">
+                        <input type="email" class="form-control" placeholder="Enter your email">
+                        <div class="input-group-append">
+                            <a href="./signup.html" class="btn btn-customize" type="button">Register</a>
+                        </div>
+                    </div>
+                </form>
+
+
+            </div>
+        </div>
+    </div>
+</footer>
+<!-- Footer -->
 
     <!-- Modal -->
     <!-- Modal -->
