--- a/pages/user-info.html
+++ b/pages/user-info.html
@@ -28,12 +28,11 @@
 </head>
 
 <body>
-
     <!-- Navigation -->
     <div class="">
         <nav class="navbar navbar-expand-lg navbar-dark bg-linear-gradient NavigationBar sticky-top">
-            <a class="navbar-brand d-flex align-items-center pl-xl-5" href="#">
-                <img src="/static/image/light.png" width="50" height="50" class="d-inline-block align-top" alt="">
+            <a class="navbar-brand d-flex align-items-center pl-xl-5" href=".index.html">
+                <img src="../static/image/light.png" width="50" height="50" class="d-inline-block align-top" alt="">
                 <span class="name-brand h4 ml-3 mb-0 font-weight-bold">E-Choosing</span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -42,50 +41,47 @@
             </button>
 
             <div class="collapse navbar-collapse " id="navbarSupportedContent">
-                <form class="wow fadeInDown form-inline my-2 my-lg-0 flex-grow-1 justify-content-center test-code">
+                <form class="form-inline my-2 my-lg-0 flex-grow-1 justify-content-center test-code">
                     <div class="input-group">
                         <input type="text" class="form-control " placeholder="Enter the join code ...">
                         <div class="input-group-append">
-                            <button class="btn btn-light" type="button">Start</button>
+                            <a class="btn btn-light" type="button" href="./doing.html">Start</a>
                         </div>
                     </div>
                 </form>
                 <ul class="navbar-nav flex-grow-1 justify-content-end">
                     <li class="nav-item mb-2 mb-lg-0">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item mb-2 mb-lg-0">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="./courses.html">Courses</a>
                     </li>
                     <li class="nav-item mb-2 mb-lg-0 dropdown">
                         <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">
-                            Dropdown
+                            Pages
                         </a>
-                        <div class="dropdown-menu dropdown-menu flipInX m-0" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
+                        <div class="dropdown-menu dropdown-menu fadeInUp m-0" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="./doing.html">Doing</a>
+                            <a class="dropdown-item" href="./contract.html">Contract Us</a>
                         </div>
                     </li>
 
-                    <li class="nav-item mb-2 mb-lg-0 active">
-                        <a class="nav-link" href="#">Sign In</a>
-                    </li>
-                    <li class="nav-item mb-2 mb-lg-0 active">
-                        <a class="nav-link" href="#">Sign Up</a>
+                </ul>
+                <ul class="navbar-nav justify-content-end">
+                    <li class="nav-item ml-4 px-3" id="avatar">
+                        <a class="avt-container" href="./user-info.html">
+                            <img class="avt_image" src="../static/image/avatar.jpg" alt="Avt">
+                            <span class="username ml-2">Nguyễn Quốc Thịnh</span>
+                            <i class="bi bi-caret-down-fill ml-1"></i>
+                        </a>
                     </li>
                 </ul>
-
 
             </div>
         </nav>
     </div>
     <!-- Navigation -->
-
-    <!-- Content -->
-    <!-- Content -->
 
     <main class="UserInfo container-fluid my-5">
         <div class="container">
@@ -152,7 +148,7 @@
                 </div>
                 <div class="col-md-8 px-2">
                     <div class="box mb-3">
-                        <h3 class="font-weight-bold mb-4">Login information</h3>
+                        <h3 class="font-weight-bold mb-4">Login Information</h3>
 
 
                         <div class="info">
@@ -194,7 +190,7 @@
                                 </div>
                                 <span class="info-item-content flex-grow-1">
                                     <i class="bi bi-pencil-square" data-target="#change-pass" data-toggle="modal"></i>
-                                    <input type="password" value="passwordpasswordpass">
+                                    <input type="password" value="passwordpassword" readonly>
                                 </span>
                             </div>
                         </div>
