--- a/pages/user-info.html
+++ b/pages/user-info.html
@@ -31,7 +31,7 @@
     <!-- Navigation -->
     <div class="">
         <nav class="navbar navbar-expand-lg navbar-dark bg-linear-gradient NavigationBar sticky-top">
-            <a class="navbar-brand d-flex align-items-center pl-xl-5" href=".index.html">
+            <a class="navbar-brand d-flex align-items-center pl-xl-5" href="./index.html">
                 <img src="../static/image/light.png" width="50" height="50" class="d-inline-block align-top" alt="">
                 <span class="name-brand h4 ml-3 mb-0 font-weight-bold">E-Choosing</span>
             </a>
@@ -87,7 +87,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 px-2 mb-3">
-                    <div class="box">
+                    <div class="wow fadeInLeft box">
                         <div class="avatar mb-3 mx-auto">
                             <i class="bi bi-images"></i>
                             <img class="avt-img" src="/static/image/avatar.jpg" alt="">
@@ -147,9 +147,8 @@
                     </div>
                 </div>
                 <div class="col-md-8 px-2">
-                    <div class="box mb-3">
+                    <div class="wow fadeInRight box mb-3">
                         <h3 class="font-weight-bold mb-4">Login Information</h3>
-
 
                         <div class="info">
                             <div class="info-item px-1">
@@ -196,9 +195,32 @@
                         </div>
 
                     </div>
+                    <div data-wow-delay="0.3s" class="wow fadeInRight box">
+                        <h3 class="font-weight-bold">Overview</h3>
 
-                    <div class="box">
-
+                        <div class="overview-container">
+                            <div class="item mx-2 mb-3">
+                                <div class="item-title">
+                                    <i class="bi bi-book"></i>
+                                    Quiz completed
+                                </div>
+                                <div class="item-process">10</div>
+                            </div>
+                            <div class="item mx-2 mb-3">
+                                <div class="item-title">
+                                    <i class="bi bi-alarm"></i>
+                                    Operation time
+                                </div>
+                                <div class="item-process">1h 20m</div>
+                            </div>
+                            <div class="item mx-2 mb-3">
+                                <div class="item-title">
+                                    <i class="bi bi-lightning"></i>
+                                    Average score
+                                </div>
+                                <div class="item-process">8.79</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
