--- a/pages/contract.html
+++ b/pages/contract.html
@@ -32,7 +32,7 @@
     <!-- Navigation -->
     <div class="">
         <nav class="navbar navbar-expand-lg navbar-dark bg-linear-gradient NavigationBar sticky-top">
-            <a class="navbar-brand d-flex align-items-center pl-xl-5" href=".index.html">
+            <a class="navbar-brand d-flex align-items-center pl-xl-5" href="./index.html">
                 <img src="../static/image/light.png" width="50" height="50" class="d-inline-block align-top" alt="">
                 <span class="name-brand h4 ml-3 mb-0 font-weight-bold">E-Choosing</span>
             </a>
